--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f7f7f7;
-    background-image: url('./pencilin.jpg');
+    background-image: url('./images/pencilin.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
